fixes in front-end to fix FAQs for Dialogflow Knowledge Base Connector, and fix bugs in support chat

--- a/front-end/src/assets/html/faq/faq.html
+++ b/front-end/src/assets/html/faq/faq.html
@@ -3,9 +3,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="robots" content="all">
-  <link rel="canonical" href="http://35.205.51.198/">
+  <link rel="canonical" href="http://www.futurebank.nl">
   <title>The Bank of the Future</title>
   <meta name="description" content="The Future Bank is a conceptional demo project. If Google were to start a bank, what would it look like?">
+
+  <style>
+        @font-face {
+            font-family: 'Google Sans';
+            src: url('/assets/fonts/GoogleSans-Regular.eot');
+            src: url('/assets/fonts/GoogleSans-Regular.eot?#iefix') format('embedded-opentype'),
+                url('/assets/fonts/GoogleSans-Regular.woff2') format('woff2'),
+                url('/assets/fonts/GoogleSans-Regular.woff') format('woff'),
+                url('/assets/fonts/GoogleSans-Regular.ttf') format('truetype'),
+                url('/assets/fonts/GoogleSans-Regular.svg#GoogleSans-Regular') format('svg');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        body {
+            font-family: 'Google Sans';
+            font-size: 14px;
+        }
+
+        h2 {
+            font-size: 16px;
+        }
+  </style>
+
 </head>
     <body>
 
